@@ -129,9 +129,6 @@ on the command line.
 to view coordinates with perspective.
 </DD>
 <P>
-<DT><I>viewName</I> <A NAME="pov"><B>pov</B></A></DT>
-<DD>Set the point of view (experimental).</DD>
-<P>
 <DT><I>viewName</I> <A NAME="rmat"><B>rmat</B></A> [<I>matrix</I>]</DT>
 <DD>Set/get the rotation matrix.</DD>
 <P>
