@@ -75,7 +75,6 @@ extern int cmd_nop(ClientData, Tcl_Interp *, int, const char *[]);
 extern int cmd_oed(ClientData, Tcl_Interp *, int, const char *[]);
 extern int cmd_output_hook(ClientData, Tcl_Interp *, int, const char *[]);
 extern int cmd_overlay(ClientData, Tcl_Interp *, int, const char *[]);
-extern int cmd_pov(ClientData, Tcl_Interp *, int, const char *[]);
 extern int cmd_put(ClientData, Tcl_Interp *, int, const char *[]);
 extern int cmd_rot(ClientData, Tcl_Interp *, int, const char *[]);
 extern int cmd_rrt(ClientData, Tcl_Interp *, int, const char *[]);
